--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- p5 -->
     <title>Deadline Dash</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
     <!-- ml5 -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
